--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -1,44 +1,12 @@
 .about
+	%h1 About Papers Past
 	.row
 		.col-md-6
 	
-			%h1 About Papers Past
-
 			%p Papers Past contains more than three million pages of digitised New Zealand newspapers and periodicals. The collection covers the years 1839 to 1945 and includes 83 publications from all regions of New Zealand.
 
 
-			%h3 How we select new titles
-			
-			%p National Library curators select new newspaper titles for Papers Past based on a number of factors, such as national and regional significance, the availability of paper or microfilm copies of the newspaper, and ensuring a good range of regions and dates. We do not provide recent material because of copyright restrictions.
 
-			%p To learn more about our newspaper digitisation programme, visit the Papers Past page on the National Library website.
-
-			%h3 What's new
-			
-			%p In April 2013 we added:
-
-			%ul 
-				%li New Zealand Herald (1885-1924)
-			
-			%p In May 2013 we added:
-			%ul 
-				%li Hutt Valley Independent (1911-1919)
-				%li Lyttelton Times (1866-1869)
-				%li Manawatu Standard (1911-1912)
-				%li Manawatu Times (1909-1911)
-				%li Nelson Evening Mail (1910-1918)
-				%li North Otago Times (1901-1918)
-				%li Upper Hutt Weekly Review (1935-1939)
-				%li Waihi Daily Telegraph (1904-1909)
-				%li Waikato Times (1893-1895)
-				%li Wairarapa Daily Times (1879-1901)
-			
-			%p In September 2013 we added:
-			%ul 
-				%li King Country Chronicle (1906-1920)
-				%li Mount Ida Chronicle (1869-1926)
-				%li Oamaru Mail (1876-1920)
-				%li Timaru Herald (1901-1920)
 
 			%h2#new_site About the new site
 
@@ -68,3 +36,38 @@
 			
 			%p The National Library would like to thank all those organisations that provided the original paper copies to the Alexander Turnbull Library for microfilming.
 
+		.col-md-6
+			.well
+
+				%h3 What's new
+				
+				%p In April 2013 we added:
+
+				%ul 
+					%li New Zealand Herald (1885-1924)
+				
+				%p In May 2013 we added:
+				%ul 
+					%li Hutt Valley Independent (1911-1919)
+					%li Lyttelton Times (1866-1869)
+					%li Manawatu Standard (1911-1912)
+					%li Manawatu Times (1909-1911)
+					%li Nelson Evening Mail (1910-1918)
+					%li North Otago Times (1901-1918)
+					%li Upper Hutt Weekly Review (1935-1939)
+					%li Waihi Daily Telegraph (1904-1909)
+					%li Waikato Times (1893-1895)
+					%li Wairarapa Daily Times (1879-1901)
+				
+				%p In September 2013 we added:
+				%ul 
+					%li King Country Chronicle (1906-1920)
+					%li Mount Ida Chronicle (1869-1926)
+					%li Oamaru Mail (1876-1920)
+					%li Timaru Herald (1901-1920)
+
+				%h3 How we select new titles
+				
+				%p National Library curators select new newspaper titles for Papers Past based on a number of factors, such as national and regional significance, the availability of paper or microfilm copies of the newspaper, and ensuring a good range of regions and dates. We do not provide recent material because of copyright restrictions.
+
+				%p To learn more about our newspaper digitisation programme, visit the Papers Past page on the National Library website.
